--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "portal-ambiental-puntadepiedras",
+  "name": "portal-digital-educativo",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16",
     "@astrojs/check": "^0.9.4",
-    "typescript": "^5.7.2"
+    "@astrojs/react": "^3.6.2",
+    "astro": "^4.16.7",
+    "typescript": "^5.6.3"
   }
 }
+
+
